--- a/index.html
+++ b/index.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <title>Портфолио</title>
 </head>
 
 <body>
     <section class="about">
         <div class="container">
-            <img src="" alt="avatar" class="about__avatar" />
-            <h2>Захаров Владислав</h2>
-            <h3 class="about__title">junior Frontend developer</h3>
-            <div></div>
+            <div class="about__inner">
+                <h2 class="about__name">Привет, Я Захаров Владислав.</h2>
+                <h3 class="about__title">Я junior Frontend developer.</h3>
+                <div class="about__info">
+                    <a target="_blank" href="mailto:zakharovvladbcf@gmail.com"><span
+                            class="about__link">Email</span></a>
+                    <a target="_blank" href="https://github.com/BeCoolFool"><span class="about__link">Github</span></a>
+                    <a target="_blank" href="https://teleg.one/truebcf"><span class="about__link">Telegram</span></a>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="skills"></section>
+    <section class="skills">
+        <div class="container">
+            <div class="skills__inner">
+                <h3 class="skills__title">Технологии:</h3>
+                <p class="skills__stack">HTML, CSS, JavaScript, React, React router, Git</p>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+            <div class="projects__inner">
+                <div class="project_card">
+                    <h4>Noobfit</h4>
+                    <img src="./img/Noobfit.jpg" alt="project screenshoot">
+                    <p>Технологии: React, Firebase API, GWER API</p>
+                    <a target="_blank" href="https://tfs-noobfit-2.now.sh/">Посмотреть онлайн</a>
+                    <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
+                </div>
+                <div class="project_card">
+                    <h4>Noobfit</h4>
+                    <img src="./img/Noobfit.jpg" alt="project screenshoot">
+                    <p>Технологии: React, Firebase API, GWER API</p>
+                    <a target="_blank" href="https://tfs-noobfit-2.now.sh/">Посмотреть онлайн</a>
+                    <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
