--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
                 </div>
                 <div class="project_card">
-                    <h4>Noobfit</h4>
-                    <img src="./img/Noobfit.jpg" alt="project screenshoot">
-                    <p>Технологии: React, Firebase API, GWER API</p>
-                    <a target="_blank" href="https://tfs-noobfit-2.now.sh/">Посмотреть онлайн</a>
-                    <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
+                    <h4>Todo List</h4>
+                    <img src="./img/todo.jpg" alt="project screenshoot">
+                    <p>Технологии: React, React Hooks, TypeScript</p>
+                    <a target="_blank" href="https://todolist-lime.now.sh/">Посмотреть онлайн</a>
+                    <a target="_blank" href="https://github.com/BeCoolFool/todolist">Посмотреть код</a>
                 </div>
             </div>
         </div>
