--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                     <a target="_blank" href="https://todolist-lime.now.sh/">Посмотреть онлайн</a>
                     <a target="_blank" href="https://github.com/BeCoolFool/todolist">Посмотреть код</a>
                 </div>
+                <div class="project_card">
+                    <h4>React table</h4>
+                    <img src="./img/React-table.jpg" alt="project screenshoot">
+                    <p>Технологии: React, React Hooks, CSS Modules, react-paginate</p>
+                    <a target="_blank" href="https://react-table-ow516ym1s.now.sh/">Посмотреть онлайн</a>
+                    <a target="_blank" href="https://github.com/BeCoolFool/reactTable">Посмотреть код</a>
+                </div>
             </div>
         </div>
     </section>
