--- a/index.html
+++ b/index.html
@@ -1,64 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Портфолио</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="about">
-        <div class="container">
-            <div class="about__inner">
-                <h2 class="about__name">Привет, Я Захаров Владислав.</h2>
-                <h3 class="about__title">Я junior Frontend developer.</h3>
-                <div class="about__info">
-                    <a target="_blank" href="mailto:zakharovvladbcf@gmail.com"><span
-                            class="about__link">Email</span></a>
-                    <a target="_blank" href="https://github.com/BeCoolFool"><span class="about__link">Github</span></a>
-                    <a target="_blank" href="https://teleg.one/truebcf"><span class="about__link">Telegram</span></a>
-                </div>
-            </div>
+      <div class="container">
+        <div class="about__inner">
+          <h2 class="about__name">Привет, Я Захаров Владислав.</h2>
+          <h3 class="about__title">Я junior Frontend developer.</h3>
+          <div class="about__info">
+            <a target="_blank" href="mailto:zakharovvladbcf@gmail.com"
+              ><span class="about__link">Email</span></a
+            >
+            <a target="_blank" href="https://github.com/BeCoolFool"
+              ><span class="about__link">Github</span></a
+            >
+            <a target="_blank" href="https://teleg.one/truebcf"
+              ><span class="about__link">Telegram</span></a
+            >
+          </div>
         </div>
+      </div>
     </section>
     <section class="skills">
-        <div class="container">
-            <div class="skills__inner">
-                <h3 class="skills__title">Технологии:</h3>
-                <p class="skills__stack">HTML, CSS, JavaScript, React, React router, Git</p>
-            </div>
+      <div class="container">
+        <div class="skills__inner">
+          <h3 class="skills__title">Технологии:</h3>
+          <p class="skills__stack">
+            HTML, CSS, JavaScript, React, React router, Git
+          </p>
         </div>
+      </div>
     </section>
     <section class="projects">
-        <div class="container">
-            <div class="projects__inner">
-                <div class="project_card">
-                    <h4>Noobfit</h4>
-                    <img src="./img/Noobfit.jpg" alt="project screenshoot">
-                    <p>Технологии: React, Firebase API, GWER API</p>
-                    <a target="_blank" href="https://tfs-noobfit-2.now.sh/">Посмотреть онлайн</a>
-                    <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
-                </div>
-                <div class="project_card">
-                    <h4>Todo List</h4>
-                    <img src="./img/todo.jpg" alt="project screenshoot">
-                    <p>Технологии: React, React Hooks, TypeScript</p>
-                    <a target="_blank" href="https://todolist-lime.now.sh/">Посмотреть онлайн</a>
-                    <a target="_blank" href="https://github.com/BeCoolFool/todolist">Посмотреть код</a>
-                </div>
-                <div class="project_card">
-                    <h4>React table</h4>
-                    <img src="./img/React-table.jpg" alt="project screenshoot">
-                    <p>Технологии: React, React Hooks, CSS Modules, react-paginate</p>
-                    <a target="_blank" href="https://react-table-ow516ym1s.now.sh/">Посмотреть онлайн</a>
-                    <a target="_blank" href="https://github.com/BeCoolFool/reactTable">Посмотреть код</a>
-                </div>
-            </div>
+      <div class="container">
+        <div class="projects__inner">
+          <div class="project_card">
+            <h3>Noobfit</h3>
+            <img src="./img/Noobfit.jpg" alt="project screenshoot" />
+            <p><b>Технологии:</b> React, Firebase API, GWER API</p>
+            <ul class="links_list">
+              <li>
+                <a target="_blank" href="https://tfs-noobfit-2.now.sh/"
+                  >Посмотреть онлайн</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://gitlab.com/BeCoolFool/tfs-noobfit"
+                  >Посмотреть код</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="project_card">
+            <h3>Todo List</h3>
+            <img src="./img/todo.jpg" alt="project screenshoot" />
+            <p><b>Технологии:</b> React, React Hooks, TypeScript</p>
+            <ul class="links_list">
+              <li>
+                <a target="_blank" href="https://todolist-lime.now.sh/"
+                  >Посмотреть онлайн</a
+                >
+              </li>
+              <li>
+                <a target="_blank" href="https://github.com/BeCoolFool/todolist"
+                  >Посмотреть код</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="project_card">
+            <h3>React table</h3>
+            <img src="./img/React-table.jpg" alt="project screenshoot" />
+            <p>
+              <b>Технологии:</b> React, React Hooks, CSS Modules, react-paginate
+            </p>
+            <ul class="links_list">
+              <li>
+                <a target="_blank" href="https://react-table-ow516ym1s.now.sh/"
+                  >Посмотреть онлайн</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://github.com/BeCoolFool/reactTable"
+                  >Посмотреть код</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
     </section>
-</body>
-
+  </body>
 </html>
