--- a/index.html
+++ b/index.html
@@ -1,100 +1,154 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Портфолио</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
-  <title>Портфолио</title>
-</head>
-
-<body>
-  <section class="about">
-    <div class="container">
-      <div class="about__inner">
-        <h2 class="about__name">Привет, Я Захаров Владислав.</h2>
-        <h3 class="about__title">Я junior Frontend developer.</h3>
-        <div class="about__info">
-          <a target="_blank" href="mailto:zakharovvladbcf@gmail.com"><span class="about__link">Email</span></a>
-          <a target="_blank" href="https://github.com/BeCoolFool"><span class="about__link">Github</span></a>
-          <a target="_blank" href="https://teleg.one/truebcf"><span class="about__link">Telegram</span></a>
+  <body>
+    <section class="about">
+      <div class="container">
+        <div class="about__inner">
+          <h2 class="about__name">Привет, Я Захаров Владислав.</h2>
+          <h3 class="about__title">Я junior Frontend developer.</h3>
+          <div class="about__info">
+            <a target="_blank" href="mailto:zakharovvladbcf@gmail.com"
+              ><span class="about__link">Email</span></a
+            >
+            <a target="_blank" href="https://github.com/BeCoolFool"
+              ><span class="about__link">Github</span></a
+            >
+            <a target="_blank" href="https://teleg.one/truebcf"
+              ><span class="about__link">Telegram</span></a
+            >
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="skills">
-    <div class="container">
-      <div class="skills__inner">
-        <h3 class="skills__title">Технологии:</h3>
-        <p class="skills__stack">
-          HTML, CSS, JavaScript, React, React router, Git
-        </p>
-      </div>
-    </div>
-  </section>
-  <section class="projects">
-    <div class="container">
-      <div class="projects__inner">
-        <div class="project_card">
-          <h3>Noobfit</h3>
-          <img src="./img/Noobfit.jpg" alt="project screenshoot" />
-          <p><b>Технологии:</b> React, Firebase API, GWER API</p>
-          <ul class="links_list">
-            <li>
-              <a target="_blank" href="https://tfs-noobfit-2.now.sh/">Посмотреть онлайн</a>
-            </li>
-            <li>
-              <a target="_blank" href="https://gitlab.com/BeCoolFool/tfs-noobfit">Посмотреть код</a>
-            </li>
-          </ul>
-        </div>
-        <div class="project_card">
-          <h3>Todo List</h3>
-          <img src="./img/todo.jpg" alt="project screenshoot" />
-          <p><b>Технологии:</b> React, React Hooks, TypeScript</p>
-          <ul class="links_list">
-            <li>
-              <a target="_blank" href="https://todolist-lime.now.sh/">Посмотреть онлайн</a>
-            </li>
-            <li>
-              <a target="_blank" href="https://github.com/BeCoolFool/todolist">Посмотреть код</a>
-            </li>
-          </ul>
-        </div>
-        <div class="project_card">
-          <h3>React table</h3>
-          <img src="./img/React-table.jpg" alt="project screenshoot" />
-          <p>
-            <b>Технологии:</b> React, React Hooks, CSS Modules, react-paginate
+    </section>
+    <section class="skills">
+      <div class="container">
+        <div class="skills__inner">
+          <h3 class="skills__title">Технологии:</h3>
+          <p class="skills__stack">
+            HTML, CSS, JavaScript, React, React router, TypeScript, Git
           </p>
-          <ul class="links_list">
-            <li>
-              <a target="_blank" href="https://react-table-ow516ym1s.now.sh/">Посмотреть онлайн</a>
-            </li>
-            <li>
-              <a target="_blank" href="https://github.com/BeCoolFool/reactTable">Посмотреть код</a>
-            </li>
-          </ul>
-        </div>
-        <div class="project_card">
-          <h3>Тестовое задание</h3>
-          <img src="./img/giphy.jpg" alt="project screenshoot" />
-          <p>
-            <b>Технологии:</b> React, React Hooks, Giphy API
-          </p>
-          <ul class="links_list">
-            <li>
-              <a target="_blank" href="https://test-giphy.now.sh">Посмотреть онлайн</a>
-            </li>
-            <li>
-              <a target="_blank" href="https://github.com/BeCoolFool/test-giphy">Посмотреть код</a>
-            </li>
-          </ul>
         </div>
       </div>
-    </div>
-  </section>
-</body>
-
+    </section>
+    <section class="projects">
+      <div class="container">
+        <h2 class="projects__title">Проекты</h2>
+        <div class="projects__inner">
+          <div class="project_card">
+            <img src="./img/Noobfit.jpg" alt="project screenshoot" />
+            <div class="project_card-info">
+              <h3>Noobfit</h3>
+              <p><strong>Технологии:</strong> React, Firebase API, GWER API</p>
+              <p>
+                <strong>Описание:</strong> Приложение для поиска информации об
+                упражнениях и сохранения составленной тренировки.
+              </p>
+              <ul class="links_list">
+                <li>
+                  <a target="_blank" href="https://tfs-noobfit-2.now.sh/"
+                    >Посмотреть онлайн</a
+                  >
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://gitlab.com/BeCoolFool/tfs-noobfit"
+                    >Посмотреть код</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project_card">
+            <img src="./img/todo.jpg" alt="project screenshoot" />
+            <div class="project_card-info">
+              <h3>Todo List</h3>
+              <p><strong>Технологии:</strong> React, React Hooks, TypeScript</p>
+              <p><strong>Описание:</strong> Простой ту-ду лист.</p>
+              <ul class="links_list">
+                <li>
+                  <a target="_blank" href="https://todolist-lime.now.sh/"
+                    >Посмотреть онлайн</a
+                  >
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://github.com/BeCoolFool/todolist"
+                    >Посмотреть код</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project_card">
+            <img src="./img/React-table.jpg" alt="project screenshoot" />
+            <div class="project_card-info">
+              <h3>React table</h3>
+              <p>
+                <strong>Технологии:</strong> React, React Hooks, CSS Modules,
+                react-paginate
+              </p>
+              <p>
+                <strong>Описание:</strong> Тестовое задание. SPA для отображения
+                табличных данных.
+              </p>
+              <ul class="links_list">
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://react-table-ow516ym1s.now.sh/"
+                    >Посмотреть онлайн</a
+                  >
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://github.com/BeCoolFool/reactTable"
+                    >Посмотреть код</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="project_card">
+            <img src="./img/giphy.jpg" alt="project screenshoot" />
+            <div class="project_card-info">
+              <h3>Тестовое задание</h3>
+              <p><strong>Технологии:</strong> React, React Hooks, Giphy API</p>
+              <p>
+                <strong>Описание:</strong> Тестовое задание. Каталог
+                изображений.
+              </p>
+              <ul class="links_list">
+                <li>
+                  <a target="_blank" href="https://test-giphy.now.sh"
+                    >Посмотреть онлайн</a
+                  >
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://github.com/BeCoolFool/test-giphy"
+                    >Посмотреть код</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
