--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="skills__inner">
           <h3 class="skills__title">Технологии:</h3>
           <p class="skills__stack">
-            HTML, CSS, JavaScript, React, React router, TypeScript, Git
+            HTML, CSS, JavaScript, React, Redux, TypeScript, Git
           </p>
         </div>
       </div>
@@ -49,7 +49,7 @@
             <img src="./img/Noobfit.jpg" alt="project screenshoot" />
             <div class="project_card-info">
               <h3>Noobfit</h3>
-              <p><strong>Технологии:</strong> React, Firebase API, GWER API</p>
+              <p><strong>Технологии:</strong> React, CSS Modules, Firebase API, GWER API</p>
               <p>
                 <strong>Описание:</strong> Приложение для поиска информации об
                 упражнениях и сохранения составленной тренировки.
@@ -97,12 +97,14 @@
             <div class="project_card-info">
               <h3>React table</h3>
               <p>
-                <strong>Технологии:</strong> React, React Hooks, CSS Modules,
+                <strong>Технологии:</strong> React, CSS Modules,
                 react-paginate
               </p>
               <p>
                 <strong>Описание:</strong> Тестовое задание. SPA для отображения
                 табличных данных.
+                Добавление, изменение, фильтрация данных в таблице.
+                Пагинация для большого набора данных.
               </p>
               <ul class="links_list">
                 <li>
@@ -126,10 +128,11 @@
             <img src="./img/giphy.jpg" alt="project screenshoot" />
             <div class="project_card-info">
               <h3>Тестовое задание</h3>
-              <p><strong>Технологии:</strong> React, React Hooks, Giphy API</p>
+              <p><strong>Технологии:</strong> React, CSS Modules, Giphy API</p>
               <p>
                 <strong>Описание:</strong> Тестовое задание. Каталог
                 изображений.
+                Просмотр, добавление, удаление, фильтрация изображений.
               </p>
               <ul class="links_list">
                 <li>
@@ -147,6 +150,34 @@
               </ul>
             </div>
           </div>
+          <div class="project_card">
+            <img src="./img/reactColor.png" alt="project screenshoot" />
+            <div class="project_card-info">
+              <h3>Тестовое задание</h3>
+              <p><strong>Технологии:</strong> React, React Hooks, React Color, CSS Modules</p>
+              <p>
+                <strong>Описание:</strong> Тестовое задание. 
+                React-приложение для работы с таблицей цветом.
+                Просмотр, добавление, изменение, удаление данных.
+                Изменение порядка записей с помощью Drag and Drop.
+                Загрузка и сохранение данных в localstorage.
+                Работа с цветом с помощью color picker.
+              </p>
+              <ul class="links_list">
+                <li>
+                  <a target="_blank" href="https://color-table.zakharovvladbcf.vercel.app/"
+                    >Посмотреть онлайн</a
+                  >
+                </li>
+                <li>
+                  <a
+                    target="_blank"
+                    href="https://github.com/BeCoolFool/color-table"
+                    >Посмотреть код</a
+                  >
+                </li>
+              </ul>
+            </div>
         </div>
       </div>
     </section>
