--- a/index.html
+++ b/index.html
@@ -46,31 +46,6 @@
         <h2 class="projects__title">Проекты</h2>
         <div class="projects__inner">
           <div class="project_card">
-            <img src="./img/Noobfit.jpg" alt="project screenshoot" />
-            <div class="project_card-info">
-              <h3>Noobfit</h3>
-              <p><strong>Технологии:</strong> React, CSS Modules, Firebase API, GWER API</p>
-              <p>
-                <strong>Описание:</strong> Приложение для поиска информации об
-                упражнениях и сохранения составленной тренировки.
-              </p>
-              <ul class="links_list">
-                <li>
-                  <a target="_blank" href="https://tfs-noobfit-2.now.sh/"
-                    >Посмотреть онлайн</a
-                  >
-                </li>
-                <li>
-                  <a
-                    target="_blank"
-                    href="https://gitlab.com/BeCoolFool/tfs-noobfit"
-                    >Посмотреть код</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="project_card">
             <img src="./img/todo.jpg" alt="project screenshoot" />
             <div class="project_card-info">
               <h3>Todo List</h3>
@@ -178,6 +153,31 @@
                 </li>
               </ul>
             </div>
+        </div>
+        <div class="project_card">
+          <img src="./img/Noobfit.jpg" alt="project screenshoot" />
+          <div class="project_card-info">
+            <h3>Noobfit</h3>
+            <p><strong>Технологии:</strong> React, CSS Modules, Firebase API, GWER API</p>
+            <p>
+              <strong>Описание:</strong> Выпускной проект для Tinkoff Fintech Frontend. Приложение для поиска информации об
+              упражнениях и сохранения составленной тренировки.
+            </p>
+            <ul class="links_list">
+              <li>
+                <a target="_blank" href="https://tfs-noobfit-2.now.sh/"
+                  >Посмотреть онлайн</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://gitlab.com/BeCoolFool/tfs-noobfit"
+                  >Посмотреть код</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
